--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "eslint": "^7.11.0",
+    "gh-pages": "^3.2.3",
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.1",
     "prop-types": "^15.7.2"
